# dashboard

./: .gitignore  main.py  pyproject.toml  requirements.txt
app/assets/: sidebar.css
app/views/: components.py  view_index.py  view_md.py  view_process.py  view_search.py  view_table_example.py
