[tool.poetry]
name = "dashexample"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
sqlalchemy = "^2.0.31"
plotly = "^5.22.0"
scikit-learn = "^1.5.0"
pandas-datareader = "^0.10.0"
yfinance = "^0.2.40"
dash = "^2.17.1"
dash-bootstrap-components = "^1.6.0"
azure-cosmos = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
